separating training and testing files for gpu maximization

--- a/training.ipynb
+++ b/training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0a24c045a306432eb788a9828b8da2fc",
+       "model_id": "f84faaf104474b93ac426c2bd0d37c9d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -117,7 +117,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6cfa540b3ce14f3bbfe6d9cfcf06a8d6",
+       "model_id": "8e2c0157bfe14278a9d4cb109a128cf4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -131,7 +131,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4099779fc1794eba83fc947546f8a061",
+       "model_id": "c0335b5c36824f769d18d2d8f1389f06",
        "version_major": 2,
        "version_minor": 0
       },
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -182,12 +182,12 @@
     "print(\"Source tokens: \", tokenizer.convert_ids_to_tokens(train_dataset_tokenized[0][\"input_ids\"]))\n",
     "print(\"Target tokens: \", tokenizer.convert_ids_to_tokens(train_dataset_tokenized[0][\"labels\"]))\n",
     "\n",
-    "# save the tokenized output to a text file\n",
-    "with open(\"dataset/training/tokenized_output.txt\", \"w\", encoding=\"utf-8\") as f:\n",
-    "    f.write(train_dataset_tokenized[0][\"source_text\"] + \"\\n\")\n",
-    "    f.write(train_dataset_tokenized[0][\"target_text\"] + \"\\n\")\n",
-    "    f.write(\" \".join(tokenizer.convert_ids_to_tokens(train_dataset_tokenized[0][\"input_ids\"])) + \"\\n\")\n",
-    "    f.write(\" \".join(tokenizer.convert_ids_to_tokens(train_dataset_tokenized[0][\"labels\"])) + \"\\n\")"
+    "# # save the tokenized output to a text file\n",
+    "# with open(\"dataset/training/tokenized_output.txt\", \"w\", encoding=\"utf-8\") as f:\n",
+    "#     f.write(train_dataset_tokenized[0][\"source_text\"] + \"\\n\")\n",
+    "#     f.write(train_dataset_tokenized[0][\"target_text\"] + \"\\n\")\n",
+    "#     f.write(\" \".join(tokenizer.convert_ids_to_tokens(train_dataset_tokenized[0][\"input_ids\"])) + \"\\n\")\n",
+    "#     f.write(\" \".join(tokenizer.convert_ids_to_tokens(train_dataset_tokenized[0][\"labels\"])) + \"\\n\")"
    ]
   },
   {
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4ddfc9e9a4ea4aeab3fab42dfa11e289",
+       "model_id": "2a563e166ed6453faa4d6a3f1ee14b5b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -229,7 +229,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cef892ebe5a74bd2988d60fc04038be9",
+       "model_id": "0a89efc764b646669d97ae99611d8f6d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,13 +313,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a0609dcb291049c1a72bb4832ea6f626",
+       "model_id": "63439a178a244be09cadf31391d0f671",
        "version_major": 2,
        "version_minor": 0
       },
@@ -335,16 +335,19 @@
     "# move the model and in22 testdata to the MPS device\n",
     "model = model.to(device)\n",
     "in22_hin_test_tokenized = in22_hin_test_tokenized.with_transform(move_to_device)\n",
+    "\n",
+    "# generate predictions for english to hindi\n",
     "eval_trainer = trainer_evaluate(model, tokenizer, in22_hin_test_tokenized)\n",
     "hin_pred, hin_lab, _ = eval_trainer.predict(in22_hin_test_tokenized)\n",
     "\n",
+    "# decode the predictions and references\n",
     "hin_pred = tokenizer.batch_decode(hin_pred, skip_special_tokens=True)\n",
     "hin_ref = tokenizer.batch_decode(hin_lab, skip_special_tokens=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -367,9 +370,7 @@
     }
    ],
    "source": [
-    "# hin_pred = tokenizer.batch_decode(hin_pred, skip_special_tokens=True)\n",
-    "# hin_ref = tokenizer.batch_decode(hin_lab, skip_special_tokens=True)\n",
-    "\n",
+    "# print the predictions and references for comparison\n",
     "for i in range(2):\n",
     "    print(\"English Text: \", in22_hin_test[i][\"source_text\"])\n",
     "    print(\"Hindi Reference: \", hin_pred[i])\n",
@@ -395,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +448,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before adding LoRA, Parameter Size: 76381184\n",
+      "After adding LoRA, Parameter Size: 76676096\n"
+     ]
+    }
+   ],
    "source": [
     "# configure LoRA\n",
     "print(f\"Before adding LoRA, Parameter Size: {model.num_parameters()}\")\n",
@@ -458,8 +468,30 @@
     "\n",
     "# define training arguments and trainer\n",
     "training_args = train_args(\"./results/train\", \"epoch\", 5e-5, 16, 2, 1, 1000, \"./logs\", 500, 2)\n",
-    "train_trainer = trainer_train(model, training_args, train_dataset_tokenized, val_dataset_tokenized, tokenizer)"
+    "train_trainer = trainer_train(model, training_args, train_dataset_tokenized, val_dataset_tokenized, tokenizer)\n",
+    "\n",
+    "# train the model\n",
+    "print(\"Finetuning the model using LoRA...\")\n",
+    "train_trainer.train()\n",
+    "\n",
+    "# save the model\n",
+    "model.save_pretrained(\"./finetuned/epoch1\")\n",
+    "tokenizer.save_pretrained(\"./finetuned/epoch1\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
