--- a/training.ipynb
+++ b/training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f84faaf104474b93ac426c2bd0d37c9d",
+       "model_id": "ae18f43240a040b298ceb9479babb868",
        "version_major": 2,
        "version_minor": 0
       },
@@ -117,7 +117,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8e2c0157bfe14278a9d4cb109a128cf4",
+       "model_id": "f8d945827baa4e32b0bbf664d846ee44",
        "version_major": 2,
        "version_minor": 0
       },
@@ -131,7 +131,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c0335b5c36824f769d18d2d8f1389f06",
+       "model_id": "788489b63f80405086af6a23265377c1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -161,17 +161,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Source text:  The Flyers ended up winning the game 5-3, adding yet another loss to an already disappointing Bruins season.\n",
-      "Target text:  फ्लायर्स मैच केँ ५-३ सँ जीति कऽ ब्रून्सक पहिनहिसँ निराशाजनक सत्र में एक टा आर पराजय जोड़लनि।\n",
-      "Source tokens:  ['▁The', '▁F', 'ly', 'ers', '▁ended', '▁up', '▁winning', '▁the', '▁game', '▁5', '-3', ',', '▁adding', '▁yet', '▁another', '▁loss', '▁to', '▁an', '▁already', '▁disappointing', '▁Bru', 'in', 's', '▁season', '.', '</s>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>']\n",
-      "Target tokens:  ['▁', 'फ', '्', 'ल', 'ा', 'य', 'र', '्', 'स', '▁', 'म', '<unk>', '▁', '<unk>', '▁', '५', '-', '३', '▁', '<unk>', '▁', 'ज', 'ी', 'ति', '▁', '<unk>', '▁', 'ब', '्', 'र', 'ू', 'न', '्', 'सक', '▁', 'प', '<unk>', 'न', '<unk>', '▁', 'न', 'ि', 'र', 'ा', 'श', 'ा', 'ज', 'न', 'क', '▁', 'सत', '्', 'र', '▁', 'म', 'े', 'ं', '▁', 'ए', 'क', '▁', 'ट', 'ा', '▁', 'आ', 'र', '▁', 'प', 'र', 'ा', '<unk>', '▁', 'ज', 'ो', 'ड', '़', 'ल', 'न', '<unk>', '</s>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>']\n"
+      "Source text:  Sectoral heterochromia may affect one or both eyes\n",
+      "Target text:  सेक्टरल हेटरोक्रोमिया एकटा या दुनू आँखिकेँ प्रभावित कऽ सकैत छैक।\n",
+      "Source tokens:  ['▁Se', 'ctor', 'al', '▁he', 'ter', 'och', 'rom', 'ia', '▁may', '▁affect', '▁one', '▁or', '▁both', '▁eyes', '</s>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>']\n",
+      "Target tokens:  ['▁', 'सेक', '्', 'ट', 'र', 'ल', '▁', 'हे', 'ट', 'र', 'ो', 'क', '्', 'र', 'ो', 'म', 'िय', 'ा', '▁', 'ए', 'क', 'ट', 'ा', '▁', 'य', 'ा', '▁', 'दु', 'न', 'ू', '▁', 'आ', '<unk>', '▁', 'प', '्', 'र', 'भ', 'ा', '<unk>', '▁', '<unk>', '▁', '<unk>', '▁', '<unk>', '</s>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>']\n"
      ]
     }
    ],
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2a563e166ed6453faa4d6a3f1ee14b5b",
+       "model_id": "ba9e38d9d9514ad7b548d5961b7e2c7c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -229,7 +229,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0a89efc764b646669d97ae99611d8f6d",
+       "model_id": "0b3c783aaf9e45a28ed7c3d99da2f753",
        "version_major": 2,
        "version_minor": 0
       },
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,13 +313,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "63439a178a244be09cadf31391d0f671",
+       "model_id": "91bb8d63e55f4aa189db97cad70933cb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +453,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Before adding LoRA, Parameter Size: 76381184\n",
+      "Before adding LoRA, Parameter Size: 76676096\n",
       "After adding LoRA, Parameter Size: 76676096\n"
      ]
     }
@@ -468,9 +468,12 @@
     "\n",
     "# define training arguments and trainer\n",
     "training_args = train_args(\"./results/train\", \"epoch\", 5e-5, 16, 2, 1, 1000, \"./logs\", 500, 2)\n",
+    "train_dataset_tokenized = train_dataset_tokenized.with_transform(move_to_device)\n",
+    "val_dataset_tokenized = val_dataset_tokenized.with_transform(move_to_device)\n",
     "train_trainer = trainer_train(model, training_args, train_dataset_tokenized, val_dataset_tokenized, tokenizer)\n",
     "\n",
     "# train the model\n",
+    "\n",
     "print(\"Finetuning the model using LoRA...\")\n",
     "train_trainer.train()\n",
     "\n",
