--- a/training.ipynb
+++ b/training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,12 +83,17 @@
     "    # move each tensor in the batch to the MPS device\n",
     "    for key in batch:\n",
     "        batch[key] = torch.tensor(batch[key]).to(device)\n",
-    "    return batch\n"
+    "    return batch\n",
+    "\n",
+    "def save_dataset(dataset, file_path):\n",
+    "    with open(file_path, \"w\", encoding=\"utf-8\") as f:\n",
+    "        for line in dataset: \n",
+    "            f.write(line + \"\\n\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +108,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ae18f43240a040b298ceb9479babb868",
+       "model_id": "ba1351ce0ec442d4b970a58816d9c41f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -117,7 +122,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f8d945827baa4e32b0bbf664d846ee44",
+       "model_id": "0acc887273a544279d7a75355546d3ee",
        "version_major": 2,
        "version_minor": 0
       },
@@ -131,7 +136,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "788489b63f80405086af6a23265377c1",
+       "model_id": "0ca485848fea4e9aa7c151d4ba836e6e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -153,25 +158,28 @@
     "val_dataset_tokenized = tokenize_dataset(val_dataset, tokenizer)\n",
     "test_dataset_tokenized = tokenize_dataset(test_dataset, tokenizer)\n",
     "\n",
-    "# # saving dataset to csv (backup)\n",
-    "# train_dataset_tokenized.to_csv(\"./dataset/training/bpcc/train_dataset.csv\")\n",
-    "# val_dataset_tokenized.to_csv(\"./dataset/training/bpcc/val_dataset.csv\")\n",
-    "# test_dataset_tokenized.to_csv(\"./dataset/training/bpcc/test_dataset.csv\")\n"
+    "# saving dataset to csv (backup)\n",
+    "save_dataset(train_dataset[\"source_text\"], \"./dataset/training_split/bpcc/train.eng_Latn\")\n",
+    "save_dataset(train_dataset[\"target_text\"], \"./dataset/training_split/bpcc/train.mai_Deva\")\n",
+    "save_dataset(val_dataset[\"source_text\"], \"./dataset/training_split/bpcc/val.eng_Latn\")\n",
+    "save_dataset(val_dataset[\"target_text\"], \"./dataset/training_split/bpcc/val.mai_Deva\")\n",
+    "save_dataset(test_dataset[\"source_text\"], \"./dataset/training_split/bpcc/test.eng_Latn\")\n",
+    "save_dataset(test_dataset[\"target_text\"], \"./dataset/training_split/bpcc/test.mai_Deva\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Source text:  Sectoral heterochromia may affect one or both eyes\n",
-      "Target text:  सेक्टरल हेटरोक्रोमिया एकटा या दुनू आँखिकेँ प्रभावित कऽ सकैत छैक।\n",
-      "Source tokens:  ['▁Se', 'ctor', 'al', '▁he', 'ter', 'och', 'rom', 'ia', '▁may', '▁affect', '▁one', '▁or', '▁both', '▁eyes', '</s>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>']\n",
-      "Target tokens:  ['▁', 'सेक', '्', 'ट', 'र', 'ल', '▁', 'हे', 'ट', 'र', 'ो', 'क', '्', 'र', 'ो', 'म', 'िय', 'ा', '▁', 'ए', 'क', 'ट', 'ा', '▁', 'य', 'ा', '▁', 'दु', 'न', 'ू', '▁', 'आ', '<unk>', '▁', 'प', '्', 'र', 'भ', 'ा', '<unk>', '▁', '<unk>', '▁', '<unk>', '▁', '<unk>', '</s>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>']\n"
+      "Source text:  Thus, for example, burhas or quick pace suggest excitement, while a slow confused pace suggests dejection.\n",
+      "Target text:  एहि तरहे, जेना बुरहा वा त्वरित गति उत्साहक सङ्केत दैत अछि , जखनकि धीमा भ्रमित गति उदासीनताक सङ्केत दैत अछि।\n",
+      "Source tokens:  ['▁Thus', ',', '▁for', '▁example', ',', '▁bur', 'has', '▁or', '▁quick', '▁pace', '▁suggest', '▁excitement', ',', '▁while', '▁a', '▁slow', '▁confused', '▁pace', '▁suggests', '▁de', 'ject', 'ion', '.', '</s>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>']\n",
+      "Target tokens:  ['▁', 'ए', '<unk>', '▁', 'त', 'र', 'हे', ',', '▁', 'जे', 'न', 'ा', '▁', 'ब', 'ु', 'र', 'ह', 'ा', '▁', 'व', 'ा', '▁', 'त', '्', 'व', 'र', 'ित', '▁', 'ग', 'ति', '▁', '<unk>', '्', 'स', 'ा', 'हक', '▁', '<unk>', '्', '<unk>', '▁', '<unk>', '▁', '<unk>', '▁', ',', '▁', '<unk>', 'न', 'कि', '▁', 'ध', 'ी', 'म', 'ा', '▁', 'भ', '्', 'र', 'म', 'ित', '▁', 'ग', 'ति', '▁', 'उद', 'ा', 'स', 'ी', 'न', 'त', 'ा', 'क', '▁', '<unk>', '्', '<unk>', '▁', '<unk>', '▁', '<unk>', '</s>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>']\n"
      ]
     }
    ],
@@ -183,7 +191,7 @@
     "print(\"Target tokens: \", tokenizer.convert_ids_to_tokens(train_dataset_tokenized[0][\"labels\"]))\n",
     "\n",
     "# # save the tokenized output to a text file\n",
-    "# with open(\"dataset/training/tokenized_output.txt\", \"w\", encoding=\"utf-8\") as f:\n",
+    "# with open(\"dataset/training_split/tokenized_output.txt\", \"w\", encoding=\"utf-8\") as f:\n",
     "#     f.write(train_dataset_tokenized[0][\"source_text\"] + \"\\n\")\n",
     "#     f.write(train_dataset_tokenized[0][\"target_text\"] + \"\\n\")\n",
     "#     f.write(\" \".join(tokenizer.convert_ids_to_tokens(train_dataset_tokenized[0][\"input_ids\"])) + \"\\n\")\n",
@@ -199,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +223,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ba9e38d9d9514ad7b548d5961b7e2c7c",
+       "model_id": "de45a96135e04a18ba8b7e9e0ccfcc34",
        "version_major": 2,
        "version_minor": 0
       },
@@ -229,7 +237,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0b3c783aaf9e45a28ed7c3d99da2f753",
+       "model_id": "a776810bb2264b86ad948c760219634d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -262,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
