--- a/training.ipynb
+++ b/training.ipynb
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,6 +306,7 @@
     "            output_dir=\"./results/test/\",\n",
     "            per_device_eval_batch_size=32,\n",
     "            predict_with_generate=True,\n",
+    "            disable_tqdm=False,\n",
     "        ), \n",
     "        eval_dataset=test_dataset,\n",
     "        tokenizer=tokenizer,\n",
