--- a/testing.ipynb
+++ b/testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,12 +22,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Part 1) Loading the finetuned model, test and benchmark datasets"
+    "### Part 1) Loading the finetuned model, test and benchmark datasets\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,12 +83,35 @@
     "    # move each tensor in the batch to the MPS device\n",
     "    for key in batch:\n",
     "        batch[key] = torch.tensor(batch[key]).to(device)\n",
-    "    return batch"
+    "    return batch\n",
+    "\n",
+    "# function to batch predict the model\n",
+    "def trainer_evaluate(model, tokenizer, test_dataset):\n",
+    "\n",
+    "    eval_trainer = Seq2SeqTrainer(\n",
+    "        model=model,\n",
+    "        args = Seq2SeqTrainingArguments(\n",
+    "            output_dir=\"./results/test/\",\n",
+    "            per_device_eval_batch_size=32,\n",
+    "            predict_with_generate=True,\n",
+    "            disable_tqdm=False,\n",
+    "        ), \n",
+    "        eval_dataset=test_dataset,\n",
+    "        tokenizer=tokenizer,\n",
+    "    )\n",
+    "\n",
+    "    return eval_trainer\n",
+    "\n",
+    "# function to evaluate the model\n",
+    "def compute_chrf(predictions, references):\n",
+    "    chrf = evaluate.load(\"chrf\")\n",
+    "    chrf_score = chrf.compute(predictions=predictions, references=references)\n",
+    "    return chrf_score "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +124,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "23fd372ca11643efbe8fd7d493bc85aa",
+       "model_id": "ca7a8e5ad1674860ba0a5dd498e952dd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -115,7 +138,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5e13cd4fa5564ab4b711b14dd847ada2",
+       "model_id": "6535f1ac381d4c198b843a3ca8ce0260",
        "version_major": 2,
        "version_minor": 0
       },
@@ -143,18 +166,82 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "033ba4ddba8340fbbf921b720ff719ce",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/32 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "\n",
+    "# move the model and in22 testdata to the MPS device\n",
+    "finetuned_model = finetuned_model.to(device)\n",
+    "in22_mai_test_tokenized = in22_mai_test_tokenized.with_transform(move_to_device)\n",
+    "\n",
+    "# generate predictions for english to hindi\n",
+    "eval_trainer = trainer_evaluate(finetuned_model, finetuned_tokenizer, in22_mai_test_tokenized)\n",
+    "mai_pred, mai_lab, _ = eval_trainer.predict(in22_mai_test_tokenized)\n",
+    "\n",
+    "# decode the predictions and references\n",
+    "mai_pred = finetuned_tokenizer.batch_decode(mai_pred, skip_special_tokens=True)\n",
+    "mai_ref = finetuned_tokenizer.batch_decode(mai_lab, skip_special_tokens=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "English Text:  An appearance is a bunch of attributes related to the service person, like their shoes, clothes, tie, jewellery, hairstyle, make-up, watch, cosmetics, perfume, etc.\n",
+      "Maithili Reference:  रूप सर्ला व्यक् सम्बन् ब रास लक् सम होयत  जेना हुनक ा, कपड़ा, टाई, गहना, , श्रृंगार, ़ी, प्रसाधन सामग्री, सेंट इत्या\n",
+      "Maithili Prediction:  एकार प्र्र्रार्र्र्रा प्र्रार्र्रा प्र्र्र्र्र्र्र्र्र्र्रा पर्र्र्र्र्र्र्रा प्र्र्र्र्रार्र्र्रान स्र्र्र्र्र्रान पार्र्रान प्र्रेल, स्र्र्र्रेलेल प्रेलेलेलेलेल स्र्र्र्र्र्रेलेलेल, स्रेलेलेलेलेलेलेलेलेलेलेलेलेलेल, स्त्त्रेल, स्त्त्रेलेलेलेल, स्त्त्र्र्र्र्थ्र्रेल, स्रेल, लेलेल, लेल, लेलेलेलेलेलेल, पे पेलेलेलेलेलेलेल, लेल, लेल, लेलेलेलेलेलेल, लेलेलेलेलेलेलेल, लेल, लेलेलेलेल, लेलेल लेल, ल ल लेलेलेलेल ल आ लेलेलेलेल।\n",
+      "\n",
+      "\n",
+      "English Text:  Ajanta, located in the Aurangabad District of Maharashtra has twenty-nine caitya and vihara caves decorated with sculptures and paintings from the first century B.C.E. to the fifth century C.E.\n",
+      "Maithili Reference:  महाराष्ट्रके औरंगाबादमे स्थित न्तामे पल ाब्दी ा पूर्व  पाम ाब्दी धरिक मूर्तिकला आ चित्रकला  ाओल उन्नतीस टा ्य आ ार\n",
+      "Maithili Prediction:  प्र्रारा प्र्रार्र्र्र्र्रार प्र्र्रार्रा प्र्र्रार्र्र्र्रार्र्रान प्र्र्र्र्र्र्र्र्र्रारार्र्रान स्रारारार्र्रान पार्र्र्रान पार्र्र्र्र्र्र्रेल स्र्रेल स्र्र्र्र्र्राल पार्र्र्र्र्र्र्र्रानानानानान पाराल स्र्र्र्र्राल पाल स्र्र्र्र्र्राराराल स्राल स्र्र्र्राल स्र्राराराराल पार्राल पाल पाल पाराराली क क स्राल पारारालाल स्र्रेलेल क स्र्रार्र्र्रारार्र्र्र्र्र्थ स्र्रेलेल क क क क क क क क क स्र्र्र्र्र्र्राल ल ल स्र्र्र्र्र्र्राल ल ल पर्र्र्र्राल पर्र्र्र्र्र्र्र्र्र्र्र्रल पर्र्र्र्र्र्र्र्र्र्र्राल ल ल\n",
+      "\n",
+      "\n",
+      "chrF++ score for English-Maithili IN22 benchmark dataset: 6.5952335417362224\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print the predictions and references for comparison\n",
+    "for i in range(2):\n",
+    "    print(\"English Text: \", in22_mai_test[i][\"source_text\"])\n",
+    "    print(\"Maithili Reference: \", mai_ref[i])\n",
+    "    print(\"Maithili Prediction: \", mai_pred[i])\n",
+    "    print(\"\\n\")\n",
+    "\n",
+    "# calculate chrF++ score for hindi to maithili overlap\n",
+    "chrf_score_mai = compute_chrf(mai_pred, mai_ref)\n",
+    "print(f\"chrF++ score for English-Maithili IN22 benchmark dataset: {chrf_score_mai['score']}\")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
