--- a/testing.ipynb
+++ b/testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -124,12 +124,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ca7a8e5ad1674860ba0a5dd498e952dd",
+       "model_id": "97e880848ee5401f89af5294d64865c3",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Map:   0%|          | 0/3383 [00:00<?, ? examples/s]"
+       "Map:   0%|          | 0/1200 [00:00<?, ? examples/s]"
       ]
      },
      "metadata": {},
@@ -138,7 +138,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6535f1ac381d4c198b843a3ca8ce0260",
+       "model_id": "7f7ea6c18dd940c7a25467ca8ddaa4ae",
        "version_major": 2,
        "version_minor": 0
       },
@@ -159,10 +159,64 @@
     "\n",
     "# read test and benchmark data\n",
     "test_dataset = prepare_data(\"./dataset/training_split/bpcc/test.eng_Latn\", \"./dataset/training_split/bpcc/test.eng_Latn\", \"test\")\n",
+    "\n",
+    "# choose random 1200 examples from test dataset for faster inference and evaluation\n",
+    "test_dataset = test_dataset.shuffle(seed=42).select(range(1200))\n",
     "test_dataset_tokenized = tokenize_dataset(test_dataset, finetuned_tokenizer)\n",
     "\n",
     "in22_mai_test = prepare_data(\"./dataset/test/IN22_test/gen/test.eng_Latn\", \"./dataset//test/IN22_test/gen/test.mai_Deva\", \"test\")\n",
     "in22_mai_test_tokenized = tokenize_dataset(in22_mai_test, finetuned_tokenizer)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 2) Testing on the test split of data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# move the model and in22 testdata to the MPS device\n",
+    "finetuned_model = finetuned_model.to(device)\n",
+    "test_dataset_tokenized = test_dataset_tokenized.with_transform(move_to_device)\n",
+    "\n",
+    "# generate predictions for english to hindi\n",
+    "eval_trainer = trainer_evaluate(finetuned_model, finetuned_tokenizer, test_dataset_tokenized)\n",
+    "mai_pred, mai_lab, _ = eval_trainer.predict(test_dataset_tokenized)\n",
+    "\n",
+    "# decode the predictions and references\n",
+    "mai_pred = finetuned_tokenizer.batch_decode(mai_pred, skip_special_tokens=True)\n",
+    "mai_ref = finetuned_tokenizer.batch_decode(mai_lab, skip_special_tokens=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print the predictions and references for comparison\n",
+    "for i in range(2):\n",
+    "    print(\"English Text: \", in22_mai_test[i][\"source_text\"])\n",
+    "    print(\"Maithili Reference: \", mai_ref[i])\n",
+    "    print(\"Maithili Prediction: \", mai_pred[i])\n",
+    "    print(\"\\n\")\n",
+    "\n",
+    "# calculate chrF++ score for hindi to maithili overlap\n",
+    "chrf_score_mai = compute_chrf(mai_pred, mai_ref)\n",
+    "print(f\"chrF++ score for English-Maithili IN22 benchmark dataset: {chrf_score_mai['score']}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 3) Testing on IN22 Eng-Mai benchmark dataset\n"
    ]
   },
   {
